<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradientbackground"
            android:layout_height="350dp">
            <ImageView
                android:layout_marginTop="45dp"
                android:layout_width="150dp"
                android:src="@drawable/circle"
                android:layout_gravity="center_horizontal"
                android:layout_height="150dp"/>
            <TextView
             android:layout_width="wrap_content"
              android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
               android:textColor="#fff"
               android:textStyle="bold"
                    android:textSize="21sp"
            android:text="@string/app_name"
    />


        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_marginTop="275dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/graylight"
            android:layout_centerHorizontal="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/name"
                    android:paddingLeft="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"

                  />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/age"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingLeft="16dp"
                    android:textColor="@color/starblue"

                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/folowering"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/age"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/starblue"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/age"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/starblue"

                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_email_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_forum_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/group"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_phone_iphone_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:text="@string/name"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_group_add_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

    </LinearLayout>
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="#fafafa"
            android:background="@drawable/buttondstyle"
            android:text="@string/folowering"
            android:layout_height="wrap_content"/>




</LinearLayout>